# ml-webscrap-tennis

./: .coverage  .gitignore  README.md  idee.rmd  joueurs_tennis.json  pyproject.toml  relation_table.drawio  requirements.txt  run_path.bat  test_doublon_joueurs.ipynb
app/: app.py  app_2.py  testt.ipynb
data/: best_model.joblib  detail_joueurs.json  joueurs.json  logreg_model_saved.joblib  stats_matchs.json  tennis_dataset_app.csv  tennis_dataset_app.parquet  tennis_dataset_clean.csv  tennis_dataset_clean.parquet  tennis_dataset_clean_essaie.csv  tennis_dataset_raw.csv  tennis_dataset_raw.parquet
data/joueurs/: Jannik_Sinner.json  Novak_Djokovic.json
donnees/: Alexander_Zverev.json  Carlos_Alcaraz.json  Jannik_Sinner.json  Novak_Djokovic.json  detail_joueurs.json  joueurs.json  joueurs_complets.json  stats_matchs.json
donnees/joueurs/: Jannik_Sinner.json  Novak_Djokovic.json
html/: page_source.html
scraping/: derniers_matchs.py  scrap_page_joueur.py  scraping_donnees_joueurs copy.py  scraping_donnees_joueurs.py  scraping_donnees_joueurs_.ipynb  scraping_donnees_matchs.py  scraping_donnes_matchs.ipynb  scraping_top_900_H.py  script_sinner.py  statistiques_joueurs.py  train_scrap_top_900.ipynb
scripts/: scraping_donnees_joueurs copy.py  scraping_donnees_joueurs.py  scraping_donnees_matchs.py  scraping_donnes_matchs.ipynb  scraping_top_900_H.py  script_sinner.py  train_scrap_top_900.ipynb
scripts/models/: logreg_model_saved.joblib  ml.ipynb  models.py  test_df.ipynb
scripts/preprocessing/: creation_dataset.py  creation_dataset_app.ipynb  creation_dataset_app.py  creation_dataset_clean.ipynb  creation_dataset_clean.py  data_clean.py
scripts/scraping/: scraping_classement.py  scraping_donnees_joueurs copy.py  scraping_donnees_joueurs.py  scraping_donnees_matchs.py  scraping_top_900_H.py  script_sinner.py
src/logging/: logging_config.py  manage_log_preprocessing.py
src/models/: models_selector.py
src/preprocessing/: preprocessing.py
src/scraping/: scrap_page_classement.py  scrap_page_joueur.py  scrap_page_match.py  scraping_donnees_matchs.py
tests/: test_preprocessing.py  test_scrap_page_classement.py  test_scrap_page_joueur.py  test_scrap_page_match.py  test_scraping_donnees_joueurs.py  test_scraping_top_900_H.py
