[project]
name = "ml-webscrap-tennis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4-stubs",
    "beautifulsoup4==4.12.3",
    "black==24.10.0",
    "bs4==0.0.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "dataclasses==0.6",
    "idna==3.10",
    "iniconfig==2.0.0",
    "joblib==1.4.2",
    "lxml>=5.3.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "numpy==2.1.3",
    "packaging==24.1",
    "pathspec==0.12.1",
    "pip>=24.3.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "polars==1.12.0",
    "pygments==2.18.0",
    "pytest==8.3.3",
    "requests==2.32.3",
    "rich==13.9.4",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "soupsieve==2.6",
    "threadpoolctl==3.5.0",
    "typing==3.7.4.3",
    "urllib3==2.2.3",
]
