[project]
name = "ml-webscrap-tennis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "types-beautifulsoup4==4.12.0.20241020",
    "black==24.10.0",
    "bs4==0.0.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "dataclasses==0.6",
    "idna==3.10",
    "iniconfig==2.0.0",
    "joblib==1.4.2",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "numpy==2.1.3",
    "packaging==24.1",
    "pathspec==0.12.1",
    "pip>=24.3.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "polars==1.12.0",
    "pygments==2.18.0",
    "pytest==8.3.3",
    "requests==2.32.3",
    "rich==13.9.4",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "soupsieve==2.6",
    "threadpoolctl==3.5.0",
    "typing==3.7.4.3",
    "urllib3==2.2.3",
    "pytest-cov==6.0.0",
    "types-requests==2.32.0.20241016",
    "asttokens==3.0.0",
    "comm==0.2.2",
    "coverage==7.6.9",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "executing==2.1.0",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "logging==0.4.9.6",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "pandas==2.2.3",
    "pandas-stubs==2.2.3.241126",
    "parso==0.8.4",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.0",
    "pure-eval==0.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32==308",
    "pyzmq==26.2.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "tqdm-stubs==0.2.1",
    "traitlets==5.14.3",
    "types-html5lib==1.1.11.20241018",
    "types-pytz==2024.2.0.20241221",
    "tzdata==2024.2",
    "wcwidth==0.2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
